# captcha

./: CMakeLists.txt  README.md
source/: FontManager.hpp  main.cpp
